/*
 * $Id: ChangeLog,v 1.3293 2004/08/09 17:09:48 mauriliolongo Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-08-10 01:10 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * contrib/libct/token1.c
    ! Fixed a dumb bug of mine in NUMTOKEN().

2004-08-09 18:58 UTC+0200 Maurilio Longo <maurilio.longo@libero.it>
  * source/rtl/tbrowse.prg
    - removed ::aColumns iVar which was not used anymore
    ! ::ColCount should rise an error if a value is assigned, simulated
      this with an ACCESS directive without an ASSIGN one
    ! when ::colpos is set to a new value, if still inside current
      tbrowse now a ::Moved() is issued, since this is more or less
      like an "implicit" K_LEFT or K_RIGHT.
  * source/debug/debugger.prg
  * source/debug/dbgtarr.prg
    - removed references to ::aColumns iVar of TBrowse, using ::ColCount now
    ! found a bug and found a work-around. Read comment inside dbgtarr.prg
      AddWindows() method. This is a bug of TBrowse but clipper is not
      able to cope with it either, so a work-around should be enough
      for now.

2004-08-09 15:54 UTC+0200 Maurilio Longo <maurilio.longo@libero.it>
  * source/rtl/tbrowse.prg
    ! fixed a painting problem when a column has a color(block) and
      tbrowse has fewer rows than available display space, now empty
      space is colored with the right color.
      To see what I mean, just add a color block to a column inside
      tests/testbrw.prg and shorten locals aTest0..3
      		local aTest0 := { "This" }
   			local aTest1 := { "1" }
   			local aTest2 := { date() }
   			local aTest3 := { .t. }
   	  and add a
   	  		oBrowse:GetColumn(5):defcolor = {3,3}
	  after column initialization, then build with clipper and with
	  xharbour before this fix.

  /* NB: when a column has a colorblock or a defcolor clipper paints